[gd_scene load_steps=9 format=3 uid="uid://c88ihturbxaki"]

[ext_resource type="Theme" uid="uid://bj27ilidrvmhr" path="res://resources/Themes/button_theme.tres" id="1_3d7pr"]
[ext_resource type="Script" path="res://pause.gd" id="1_h3w8c"]
[ext_resource type="AudioStream" uid="uid://dg6s8j7lh0iyc" path="res://resources/Music/Ã†ternity - Human After All (Daft Punk cover).mp3" id="3_pr5hp"]
[ext_resource type="Script" path="res://AudioControl.gd" id="3_tcuc1"]
[ext_resource type="Script" path="res://Fullscreen.gd" id="4_1lyj7"]

[sub_resource type="Theme" id="Theme_n4b5f"]
default_font_size = 40

[sub_resource type="StyleBoxLine" id="StyleBoxLine_6j8no"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_d2gdd"]
color = Color(0.101961, 0.894118, 1, 1)
thickness = 6

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h3w8c")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -188.5
offset_right = 120.0
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ResumeButton" type="Button" parent="PanelContainer/PauseMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_3d7pr")
text = "Resume"

[node name="RestartButton" type="Button" parent="PanelContainer/PauseMenu"]
layout_mode = 2
theme = ExtResource("1_3d7pr")
text = "Restart"

[node name="OptionButton" type="Button" parent="PanelContainer/PauseMenu"]
layout_mode = 2
theme = ExtResource("1_3d7pr")
text = "Options"

[node name="QuitButton" type="Button" parent="PanelContainer/PauseMenu"]
layout_mode = 2
theme = ExtResource("1_3d7pr")
text = "Quit"

[node name="OptionsMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -267.0
offset_right = 212.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="Label" parent="OptionsMenu"]
layout_mode = 0
offset_right = 423.0
offset_bottom = 73.0
theme = SubResource("Theme_n4b5f")
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="OptionsMenu"]
offset_left = 138.0
offset_top = 392.0
offset_right = 285.0
offset_bottom = 483.0
theme = ExtResource("1_3d7pr")
text = "Back"

[node name="MusicControl" type="HSlider" parent="OptionsMenu"]
layout_mode = 0
offset_left = 76.0
offset_top = 86.0
offset_right = 341.0
offset_bottom = 188.0
theme_override_styles/slider = SubResource("StyleBoxLine_6j8no")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_d2gdd")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_d2gdd")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("3_tcuc1")

[node name="Volume" type="Label" parent="OptionsMenu"]
layout_mode = 0
offset_left = 351.0
offset_top = 121.0
offset_right = 407.0
offset_bottom = 151.0

[node name="Fullscreen" type="CheckButton" parent="OptionsMenu"]
layout_mode = 0
offset_left = 69.0
offset_top = 146.0
offset_right = 390.0
offset_bottom = 177.0
text = "FullScreen"
script = ExtResource("4_1lyj7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pr5hp")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="PanelContainer/PauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/PauseMenu/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/PauseMenu/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="PanelContainer/PauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="OptionsMenu/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="OptionsMenu/MusicControl" to="OptionsMenu/MusicControl" method="_on_value_changed"]
[connection signal="toggled" from="OptionsMenu/Fullscreen" to="OptionsMenu/Fullscreen" method="_on_toggled"]
